syntax = "proto3";

package blog;

service BlogService {
  rpc ListBlog (ListBlogRequest) returns (stream BlogResponse) {};
  rpc CreateBlog (BlogRequest) returns (BlogResponse) {};
  rpc UpdateBlog (BlogRequest) returns (BlogResponse) {};
  rpc FindBlog (BlogIdRequest) returns (BlogResponse) {};
  rpc DeleteBlog (BlogIdRequest) returns (BlogResponse) {};
}

message Blog {
  int32 id = 1;
  string author = 2;
  string title = 3;
  string content = 4;
}

message ListBlogRequest {}

message BlogResponse {
  Blog blog = 1;
}

message BlogRequest {
  Blog blog = 1;
}

message BlogIdRequest {
  int32 id = 1;
}